# pfas-analysis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
scripts/: clean_pfas.py
src/: plyground.ipynb
