[project]
name = "pfas-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0,<3",
    "pillow>=10.0.0",
    "plotly>=6.5.2",
    "streamlit>=1.53",
    "pymupdf>=1.24.0",
]
